force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>QtC Mig Invoice Lines Temp Table (Order)</relationshipLabel>
    <relationshipName>QtC_Mig_Invoice_Lines_Temp_Table1</relationshipName>
    <type>Lookup</type>
</CustomField>