force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/T_DupProdCode__c.field-meta.xml
<CustomField>
    <fullName>T_DupProdCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Duplicate Product Code in Org?</description>
    <label>T_DupProdCode?</label>
    <type>Checkbox</type>
</CustomField>