force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/T_MatchedWithPayCM__c.field-meta.xml
<CustomField>
    <fullName>T_MatchedWithPayCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T_MatchedWithPayCM?</label>
    <type>Checkbox</type>
</CustomField>