force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/fields/T_Product__c.field-meta.xml
<CustomField>
    <fullName>T_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Lookup based on product code.</description>
    <label>T_Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>QtC Mig Invoice Lines Temp Table</relationshipLabel>
    <relationshipName>QtC_Mig_Invoice_Lines_Temp_Table</relationshipName>
    <type>Lookup</type>
</CustomField>