force-app/main/default/objects/QtC_Mig_Invoice_Lines_Temp_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_ID__c</columns>
    <columns>Amount_Foreign_Currency_without_Symbol__c</columns>
    <columns>Rev_Rec_Start_Date__c</columns>
    <columns>Rev_Rec_End_Date__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Order_Internal_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>